clusters/talos-robbinsdale/apps/rancher/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher
  namespace: cattle-system
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "rancher.rajsingh.info"
    - "rancher.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: rancher
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
